// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  height: auto;
}

.emotion-4[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

.emotion-6 {
  font-size: 12px;
  color: #b3144d;
  padding-top: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div>
        <div
          class="emotion-0 emotion-1"
        >
          <input
            autocomplete="on"
            class="emotion-2 emotion-3"
            name="test"
            type="text"
          />
        </div>
        <div
          class="emotion-4 emotion-5"
          data-is-animated="true"
        >
          <div
            class="emotion-6 emotion-7"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  height: auto;
}

.emotion-4[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

.emotion-6 {
  font-size: 12px;
  color: #b3144d;
  padding-top: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div>
        <div
          class="emotion-0 emotion-1"
        >
          <input
            autocomplete="on"
            class="emotion-2 emotion-3"
            disabled=""
            name="test"
            type="text"
          />
        </div>
        <div
          class="emotion-4 emotion-5"
          data-is-animated="true"
        >
          <div
            class="emotion-6 emotion-7"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputField > should render correctly generated 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  height: auto;
}

.emotion-4[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

.emotion-6 {
  font-size: 12px;
  color: #b3144d;
  padding-top: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div>
        <div
          class="emotion-0 emotion-1"
        >
          <input
            autocomplete="on"
            class="emotion-2 emotion-3"
            name="test"
            type="text"
          />
        </div>
        <div
          class="emotion-4 emotion-5"
          data-is-animated="true"
        >
          <div
            class="emotion-6 emotion-7"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputField > should render correctly id 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  height: auto;
}

.emotion-4[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

.emotion-6 {
  font-size: 12px;
  color: #b3144d;
  padding-top: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div>
        <div
          class="emotion-0 emotion-1"
        >
          <input
            autocomplete="on"
            class="emotion-2 emotion-3"
            id="id"
            name="test"
            type="text"
          />
        </div>
        <div
          class="emotion-4 emotion-5"
          data-is-animated="true"
        >
          <div
            class="emotion-6 emotion-7"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputField > should render correctly notice 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  height: auto;
}

.emotion-4[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

.emotion-6 {
  font-size: 12px;
  color: #b3144d;
  padding-top: 0.125rem;
}

.emotion-10 {
  color: #727683;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-12 {
  vertical-align: middle;
  fill: #727683;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-12 .fillStroke {
  stroke: #727683;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div>
        <div
          class="emotion-0 emotion-1"
        >
          <input
            autocomplete="on"
            class="emotion-2 emotion-3"
            name="test"
            type="text"
          />
        </div>
        <div
          class="emotion-4 emotion-5"
          data-is-animated="true"
        >
          <div
            class="emotion-6 emotion-7"
          />
        </div>
        <span
          class="emotion-8 emotion-9 emotion-10 emotion-11"
        >
          <svg
            class="emotion-12 emotion-13"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M10 3.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13M2 10a8 8 0 1 1 16 0 8 8 0 0 1-16 0m7.25-3.02a.75.75 0 0 1 .75-.75h.006a.75.75 0 0 1 .75.75v.005a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zm.244 3.16a.75.75 0 0 1-.434-1.415l.034-.017c1.035-.517 2.2.418 1.92 1.54l-.508 2.03a.75.75 0 0 1 .434 1.414l-.034.016c-1.035.518-2.2-.417-1.92-1.54z"
            />
          </svg>
          notice
        </span>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputField > should render correctly random 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #727683;
  pointer-events: auto;
}

.emotion-4:hover,
.emotion-4:focus-within {
  color: #3f4250;
}

.emotion-4>button {
  box-shadow: none!important;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 24px;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-8:hover,
.emotion-8:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-10 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-10 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-12 {
  height: auto;
}

.emotion-12[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

.emotion-14 {
  font-size: 12px;
  color: #b3144d;
  padding-top: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div>
        <div
          class="emotion-0 emotion-1"
        >
          <input
            autocomplete="on"
            class="emotion-2 emotion-3"
            name="test"
            type="text"
          />
          <div
            class="emotion-4 emotion-5"
          >
            <div
              class="emotion-6 emotion-7"
            >
              <button
                aria-label="randomize"
                class="emotion-8 emotion-9"
                type="button"
              >
                <svg
                  class="emotion-10 emotion-11"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m13.73 3.963.337-.732.731-.338a.345.345 0 0 0 0-.628l-.73-.338-.339-.725a.345.345 0 0 0-.628 0l-.338.731-.724.339a.345.345 0 0 0 0 .628l.731.338.338.725a.34.34 0 0 0 .621 0m-7.933 0 .338-.732.731-.338a.345.345 0 0 0 0-.628l-.73-.332-.339-.731a.34.34 0 0 0-.62 0l-.339.731-.73.339a.345.345 0 0 0 0 .628l.73.338.338.725a.34.34 0 0 0 .621 0m7.312 5.175-.338.732-.73.338a.345.345 0 0 0 0 .628l.73.338.338.732a.345.345 0 0 0 .628 0l.338-.732.724-.345a.345.345 0 0 0 0-.628l-.73-.338-.339-.732c-.117-.262-.503-.262-.62.007m-1.27-3.023L9.887 4.162a.687.687 0 0 0-.973 0L1.202 11.87a.69.69 0 0 0 0 .973l1.952 1.953c.269.27.704.27.973 0l7.705-7.709a.68.68 0 0 0 .007-.973M9.424 7.557l-.972-.973.952-.952.972.973z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="emotion-12 emotion-13"
          data-is-animated="true"
        >
          <div
            class="emotion-14 emotion-15"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputField > should render correctly required 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: calc(1 * 2rem);
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #727683;
}

.emotion-4:hover,
.emotion-4:focus-within {
  color: #3f4250;
}

.emotion-6 {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.emotion-6 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-8 {
  height: auto;
}

.emotion-8[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

.emotion-10 {
  font-size: 12px;
  color: #b3144d;
  padding-top: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div>
        <div
          class="emotion-0 emotion-1"
        >
          <input
            autocomplete="on"
            class="emotion-2 emotion-3"
            name="test"
            required=""
            type="text"
          />
          <div
            class="emotion-4 emotion-5"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-8 emotion-9"
          data-is-animated="true"
        >
          <div
            class="emotion-10 emotion-11"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputField > should render correctly with minLength 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  border-color: #b3144d;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #92103f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
  border-color: #92103f;
}

.emotion-4 {
  height: auto;
}

.emotion-4[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

.emotion-6 {
  font-size: 12px;
  color: #b3144d;
  padding-top: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div>
        <div
          class="emotion-0 emotion-1"
        >
          <input
            autocomplete="on"
            class="emotion-2 emotion-3"
            name="test"
            type="text"
            value="test"
          />
        </div>
        <div
          class="emotion-4 emotion-5"
          data-is-animated="true"
        >
          <div
            class="emotion-6 emotion-7"
          >
            This field should have a length greater than 13
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
